--- a/proiect mobile/gyro.html
+++ b/proiect mobile/gyro.html
@@ -6,9 +6,16 @@
   </head>
 
   <body>
+<p>UI version = 2019.1.25.0</p>
+<p>id = "id_logic_version"</p>
+
     <p id ="id_alpha"> </p>
     <p id ="id_beta"> </p>
     <p id ="id_gamma"> </p>
+
+    <p id ="id_acc_x"> </p>
+    <p id ="id_acc_y"> </p>
+    <p id ="id_acc_z"> </p>
 
     <script type="gyro.js"> </script>
 
