--- a/proiect mobile/gyro.html
+++ b/proiect mobile/gyro.html
@@ -7,7 +7,7 @@
 
   <body>
 <p>UI version = 2019.1.25.0</p>
-<p>id = "id_logic_version"</p>
+<p id = "id_logic_version"></p>
 
     <p id ="id_alpha"> </p>
     <p id ="id_beta"> </p>
